src/parser/snapshots/rbx_rsml__parser__tests__compiler_rule_missing_close_brace.snap
---
source: src/parser/mod.rs
expression: compiled
---
CompiledRsml {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {},
            },
            static_attributes: {},
            child_rules: [
                0,
            ],
        },
    ),
    nodes: [
        Some(
            TreeNode {
                selector: Some(
                    "Frame",
                ),
                priority: None,
                tweens: {},
                attributes: Attributes {
                    data: {},
                },
                static_attributes: {},
                properties: Attributes {
                    data: {
                        "Size": Float64(
                            100.0,
                        ),
                    },
                },
                child_rules: [],
                parent: Root,
            },
        ),
    ],
}
