src/parser/snapshots/rbx_rsml__parser__tests__compiler_rule_name_selector.snap
---
source: src/parser/mod.rs
expression: compiled
---
CompiledRsml {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {},
            },
            static_attributes: {},
            child_rules: [
                0,
            ],
        },
    ),
    nodes: [
        Some(
            TreeNode {
                selector: Some(
                    "#MyFrame",
                ),
                priority: None,
                attributes: Attributes {
                    data: {},
                },
                static_attributes: {},
                properties: Attributes {
                    data: {},
                },
                tweens: Attributes {
                    data: {},
                },
                child_rules: [],
                parent: Root,
            },
        ),
    ],
    is_static: false,
}
