src/parser/snapshots/rbx_rsml__parser__tests__compiler_rule_nested.snap
---
source: src/parser/mod.rs
expression: compiled
---
CompiledRsml {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {},
            },
            static_attributes: {},
            child_rules: [
                0,
            ],
        },
    ),
    nodes: [
        Some(
            TreeNode {
                selector: Some(
                    "Frame",
                ),
                priority: None,
                attributes: Attributes {
                    data: {},
                },
                static_attributes: {},
                properties: Attributes {
                    data: {},
                },
                tweens: Attributes {
                    data: {},
                },
                child_rules: [
                    1,
                ],
                parent: Root,
            },
        ),
        Some(
            TreeNode {
                selector: Some(
                    "TextLabel",
                ),
                priority: None,
                attributes: Attributes {
                    data: {},
                },
                static_attributes: {},
                properties: Attributes {
                    data: {
                        "Text": String(
                            "hi",
                        ),
                    },
                },
                tweens: Attributes {
                    data: {},
                },
                child_rules: [],
                parent: Node(
                    0,
                ),
            },
        ),
    ],
    is_static: false,
}
